<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracks">Top 10 Tracks</string>
    <string name="title_activity_music_player">Music Player</string>
    <string name="dummy_artist">Artist Name</string>
    <string name="dummy_album_title">Album Name</string>
    <string name="dummy_tracks_title">Track Title</string>
    <string name="no_artist_found">No Artist Found! Please Refine Your Search</string>
    <string name="no_internet_connection">No Internet Connection! Please Check Your Network Connection</string>
    <string name="no_results">No Results Found! Please Refine Your Search</string>
    <string name="dummy_current_duration">0:00</string>
    <string name="dummy_total_duration">10:00</string>
    <string name="music_buffering">Music is buffering...</string>


    <!-- Preference/Settings Setup USA only for now -->
    <string name="country_label">Country</string>
    <string name="country_key">country</string>
    <string name="country_default">US</string>
    <string name="title_activity_play_tracks">PlayTracksActivity</string>
</resources>
